retention/main/default/objects/Queue_Retention_Policy__mdt/Queue_Retention_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Queue Retention Policy</label>
    <pluralLabel>Queue Retention Policies</pluralLabel>
</CustomObject>