retention/main/default/objects/Queue_Retention_Policy__mdt/fields/DryRun__c.field-meta.xml
<CustomField>
    <fullName>DryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, evaluate + log counts but do not DML. Overridden by Queue_Admin_Setting__c.GlobalDryRun__c.</description>
    <label>Dry Run</label>
    <type>Checkbox</type>
</CustomField>