retention/main/default/objects/Queue_Retention_Policy__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Per-policy opt-in. Master enablement is on Queue_Admin_Setting__c.IsRetentionEnabled__c.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>