retention/main/default/objects/Queue_Retention_Policy__mdt/fields/MaxDeletePerRun__c.field-meta.xml
<CustomField>
    <fullName>MaxDeletePerRun__c</fullName>
    <description>Hard cap per batch execution for this policy. Enforced via QueryLocator LIMIT clause.</description>
    <label>Max Delete Per Run</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>