retention/main/default/objects/Queue_Retention_Policy__mdt/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <description>Rows older than this (based on CreatedDate) are eligible for delete.</description>
    <label>Retention Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>