retention/main/default/objects/Queue_Retention_Policy__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Queue__c.Status__c value this policy targets. At most one ACTIVE policy per status (enforced at upsert).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>INVALID</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>UNHANDLED</fullName>
            </value>
            <value>
                <fullName>BATCH</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>